# bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_cc", version = "0.0.9")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Register the Go SDK installed on the host.
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

use_repo(go_deps, "com_github_strukturag_libheif")

go_deps.module_override(
    patch_strip = 1,
    patches = ["//build/bazel/patches:com_github_strukturag_libheif.patch"],
    path = "github.com/strukturag/libheif",
)
